fixed the gap of destination

--- a/styles/style.css
+++ b/styles/style.css
@@ -666,7 +666,9 @@ footer {
     .about-text {
         width: 100%;
     }
-
-
-
+}
+@media  screen and (min-width:992px) and (max-width:1410px){
+    .destination-container {
+        gap: 6rem;
+    }
 }
